Portfolio page - fix z-index

--- a/modules/pages/portfolio-page.css
+++ b/modules/pages/portfolio-page.css
@@ -1,5 +1,5 @@
 .portfolio {
-    z-index: 8;
+    z-index: 3;
 }
 
 .portfolio .filter {
